--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/RuudunStatus.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/RuudunStatus.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_20'></a>
 <span>
 </span>
 </td>
@@ -344,12 +344,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_21'></a>
 <span>
 </span>
 </td>
@@ -358,12 +358,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_22'/>
 22
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_22'>1</a>
 <span>
 1. getVari : mutated return of Object value for cs/helsinki/sudoku/app/RuudunStatus::getVari to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED<br/>
 
@@ -374,12 +374,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_23'></a>
 <span>
 </span>
 </td>
@@ -388,12 +388,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_24'></a>
 <span>
 </span>
 </td>
@@ -402,12 +402,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_25'></a>
 <span>
 </span>
 </td>
@@ -416,12 +416,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@120d3fd_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4693a9ef_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_26'></a>
 <span>
 </span>
 </td>
@@ -432,11 +432,11 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@120d3fd_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4693a9ef_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@120d3fd_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4693a9ef_22'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getVari<br/><b>Killed by : </b>cs.helsinki.sudoku.app.RuudunStatusTest.antaaVarin(cs.helsinki.sudoku.app.RuudunStatusTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/RuudunStatus::getVari to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
@@ -459,7 +459,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.RuudunStatusTest.antaaVarin(cs.helsinki.sudoku.app.RuudunStatusTest) (2 ms)</li>
+<li>cs.helsinki.sudoku.app.RuudunStatusTest.antaaVarin(cs.helsinki.sudoku.app.RuudunStatusTest) (1 ms)</li>
 </ul>
 
 <br/>
