--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_20'></a>
 <span>
 </span>
 </td>
@@ -344,12 +344,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_21'></a>
 <span>
 </span>
 </td>
@@ -358,12 +358,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_22'></a>
 <span>
 </span>
 </td>
@@ -372,12 +372,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_23'/>
 23
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_23'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_23'>1</a>
 <span>
 1. getTyhjennettavienLkm : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -388,12 +388,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_24'></a>
 <span>
 </span>
 </td>
@@ -402,12 +402,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_25'></a>
 <span>
 </span>
 </td>
@@ -416,12 +416,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_26'></a>
 <span>
 </span>
 </td>
@@ -430,12 +430,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_27'/>
 27
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_27'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_27'>1</a>
 <span>
 1. getMinuutit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -446,12 +446,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_28'/>
 28
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_28'></a>
 <span>
 </span>
 </td>
@@ -460,12 +460,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_29'/>
 29
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_29'></a>
 <span>
 </span>
 </td>
@@ -474,12 +474,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_30'/>
 30
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_30'></a>
 <span>
 </span>
 </td>
@@ -488,12 +488,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_31'/>
 31
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_31'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_31'>1</a>
 <span>
 1. getSekunnit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -504,12 +504,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_32'/>
 32
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_32'></a>
 <span>
 </span>
 </td>
@@ -518,12 +518,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@593a6726_33'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6dab01d9_33'/>
 33
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_33'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_33'></a>
 <span>
 </span>
 </td>
@@ -534,31 +534,31 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@593a6726_23'>23</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6dab01d9_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_23'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_23'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getTyhjennettavienLkm<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@593a6726_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6dab01d9_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_27'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getMinuutit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@593a6726_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6dab01d9_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@593a6726_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6dab01d9_31'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getSekunnit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
@@ -581,7 +581,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (107 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (126 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (120 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (97 ms)</li><li>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest) (3 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (34 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (86 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (1078 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1366 ms)</li>
+<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (77 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (101 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (41 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (69 ms)</li><li>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (26 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (63 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (682 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (942 ms)</li>
 </ul>
 
 <br/>
